Bug 802457. Ensure that positioned children of intrinsic-height viewports are reflowed with the correct container height. r=mats